# shuup-wishlist

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.rst  MANIFEST.in  README.rst  requirements-test.txt  setup.cfg  setup.py  testing_requirements.txt
.tx/: config
shoop_wishlist/: __init__.py  models.py  plugins.py  urls.py  views.py
shoop_wishlist/migrations/: 0001_initial.py
shoop_wishlist/static/shoop_wishlist/css/: style.css
shoop_wishlist/templates/shoop_wishlist/: create_wishlist_modal.jinja  customer_wishlist_detail.jinja  customer_wishlists.jinja  wishlist_action_button.jinja
shoop_wishlist_tests/: settings.py  test_plugin.py  test_views.py
shuup_wishlist/: .gitignore  __init__.py  build_resources.js  configuration.py  dashboard_items.py  favorites.py  forms.py  generated_resources.txt  gulpfile.js  models.py  npm-shrinkwrap.json  package-lock.json  package.json  plugins.py  urls.py  views.py
shuup_wishlist/migrations/: 0001_initial.py  0002_m2m_product_to_shop_product.py  0002_shop_product.py  0003_rename_shop_products_to_products.py
shuup_wishlist/static_src/js/: flash_message.js  index.js  lib.js  script.js
shuup_wishlist/static_src/less/: style.less
shuup_wishlist/templates/shuup_wishlist/: create_wishlist_modal.jinja  customer_wishlist_detail.jinja  customer_wishlists.jinja  macros.jinja  public_wishlists.jinja  select_wishlist_modal.jinja  wishlist_action_button.jinja
shuup_wishlist_tests/: conftest.py  fixtures.py  settings.py  test_forms.py  test_plugin.py  test_views.py
(+12 files in other folders)
