[metadata]
name = shuup-wishlist
version = 0.3.10.post+gitver
description = Shuup Wishlist
long_description = file: README.rst
keywords = shuup, wishlist

[options]
include_package_data = True
packages = find:
install_requires =
    setuptools-gitver>=1.1.0

[options.extras_require]
shuup = shuup>=1.7,<2

[options.entry_points]
shuup.addon = shuup_wishlist = shuup_wishlist

[bdist_wheel]
universal = 1

[flake8]
exclude = .tox,migrations,doc/*
max-line-length = 120
max-complexity = 10

[tool:pytest]
DJANGO_SETTINGS_MODULE = shuup_wishlist_tests.settings
django_find_project = false
norecursedirs = bower_components node_modules .git venv

[isort]
atomic=true
combine_as_imports=false
indent=4
known_first_party=shuup
known_standard_library=token,tokenize,enum,importlib
known_third_party=django,six
length_sort=false
line_length=79
multi_line_output=5
order_by_type=false
skip=migrations
not_skip=__init__.py
wrap_length=79
